--- a/src/pages/OurClients/OurClients.css
+++ b/src/pages/OurClients/OurClients.css
@@ -1,3 +1,15 @@
 .our-clients-gradient-background {
   background: linear-gradient(to bottom, #87ceeb, #f5dcb1);
 }
+
+.bg-custom-yellow-color {
+  background-color: #ffeb3b;
+}
+
+.shadow-lg {
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
