--- a/src/pages/Home/HomePage.css
+++ b/src/pages/Home/HomePage.css
@@ -123,3 +123,13 @@
     height: 60px;
   }
 }
+
+/* Glassmorphism para el contenedor principal del Swiper */
+.glassmorphism-main-container {
+  background: rgba(245, 232, 162, 0.41);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(8.3px);
+  -webkit-backdrop-filter: blur(8.3px);
+  border: 1px solid rgba(245, 232, 162, 1);
+}
